write html and added css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link css into html -->
+    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <title>Professional Portfolio</title>
+</head>
+
+<body>
+    <!-- header and nav bar location -->
+    <header>
+        <h1>Jianxiong Chen</h1>
+        <!-- 3 lists in unordered list in nav bar -->
+        <nav>
+            <a href="#me">About Me</a>
+            <a href="#previous-Work">Previous Work</a>
+            <a href="#contact">Contact Me</a>
+        </nav>
+    </header>
+
+    <!-- main content in this html including my picture and about me, as well as my work -->
+    <main>
+        <!-- first section starts -->
+        <section class="About-me">    
+            <div id="side-text">
+                <!-- match the name in nav bar, once it click in nav bar, it goes to here -->
+                <h2 id="me">About Me</h2>
+            </div>
+            <div id="pic-and-pargragh">
+                <picture id="mypic">
+                    <img id="photo-of-mine" src="./assets/images/photo-of-mine.jpg" alt="Photo of Mine">
+                </picture>
+                <p>
+                    A graduate of the University of Washington Foster School of Business, Jianxiong took a 180-degree turn into an auto mechanic with his passion for cars when it came to career choices. In the meantime, he took some self-directed programming lessons when he was not at the shop. While he enjoyed getting his hands dirty on mechanical jobs, he realized he had an even greater desire to "Think Big" through the lines of codes and fix the invisible problems - bug hunts! You will find Jianxiong either typing up codes in front of his multi-screen computer, messing with his cars in the garage, or taking a pleasant walk with his wife and dog Twinkle - a lovely fluffy pomsky!
+                </p>
+            </div>
+        </section>
+       <!-- second section starts -->
+        <section class="work-of-mine">
+            <div id="side-text">
+                <h2 id="previous-Work">Previous Work</h2>
+            </div>
+            <div id="project-link-and-pic">
+                <a href="https://cqlove.github.io/code-refactoring-for-homeworkone/">
+                    <image id="Horiseon" src="./assets/images/screenshot.png" alt="Previous-work-Horiseon"></image>                    
+                </a>
+                <a href="https://cqlove.github.io/prework-study-guide/">
+                    <image id="prework" src="./assets/images/Screenshot-prework.png" alt="Previous-work-prework"></image>
+                </a>
+            </div>
+        </section>
+    </main>
+    
+    <!-- This is the footer which is the contact me section at bottom -->
+    <footer>
+        <div id="side-text-footer">
+            <p id="contact"> Contact Me</p>
+        </div>
+        <div id="contact-info">
+            <!-- email link to send me email -->
+            <a href="mailto:chenjianxiong1997@gmail.com">Email</a>
+            <!-- web link to my github -->
+            <a href="https://github.com/CQlove">GitHub</a>
+            <!-- call my number -->
+            <a href="tel:702-524-8322">Call Me</a>
+            <!-- web link to LinkedIn -->
+            <a href="https://www.linkedin.com/in/jianxiong-chen-9a279b275/">LinkedIn</a>
+        </div>
+    </footer>
+</body>
+</html>
 
