adding new work

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
             </div>
             <div id="project-link-and-pic">
                 <a href="https://cqlove.github.io/code-refactoring-for-homeworkone/">
-                    <image id="Horiseon" src="./assets/images/screenshot.png" alt="Previous-work-Horiseon"></image>                    
+                    <image id="Horiseon" src="./assets/images/screenshot.png" alt="Horiseon"></image>                    
                 </a>
                 <a href="https://cqlove.github.io/prework-study-guide/">
                     <image id="prework" src="./assets/images/Screenshot-prework.png" alt="Previous-work-prework"></image>
+                </a>
+                <a href="https://ronin1702.github.io/krapyak/">
+                    <image id="Project-krapyak" src="./assets/images/krapyak.png" alt="Project-krapyak"></image>
                 </a>
             </div>
         </section>
