added project2 into this page

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <div class="row">
                     <div class="col">
                         <p class="fw-bolder mt-3">Project 2 cover letter generator(Full-stack-web):</p>
-                        <a href="https://github.com/Ronin1702/project2">
-                            <image id="Project-cv-letter" src="./assets/images/krapyak.png" alt="Project-cv-letter">
+                        <a href="https://cover-letter-generator-3000-7a5be5cf3592.herokuapp.com/">
+                            <image id="Project-cv-letter" src="./assets/images/project2.png" alt="Project-cv-letter">
                             </image>
                         </a>
                     </div>
