added a box outside of the work

--- a/index.html
+++ b/index.html
@@ -64,38 +64,48 @@
                     <image id="Project-krapyak" src="./assets/images/krapyak.png" alt="Project-krapyak"></image>
                 </a>
             </div> -->
-            <div class="container text-center" id="project-link-and-pic">
+            <div class="container-fluid text-center" id="project-link-and-pic">
                 <div class="row">
                     <div class="col">
-                        <p class="fw-bolder mt-3">Horiseon:</p>
-                        <a href="https://cqlove.github.io/code-refactoring-for-homeworkone/">
-                            <image id="Horiseon" src="./assets/images/screenshot.png" alt="Horiseon"></image>
-                        </a>
+                        <div class="project-box">
+                            <p class="fw-bolder mt-3">Horiseon:</p>
+                            <a href="https://cqlove.github.io/code-refactoring-for-homeworkone/">
+                                <image id="Horiseon" src="./assets/images/screenshot.png" alt="Horiseon"></image>
+                            </a>
+                        </div>
                     </div>
                     <div class="col">
-                        <p class="fw-bolder mt-3">Prework study guide:</p>
-                        <a href="https://cqlove.github.io/prework-study-guide/">
-                            <image id="prework" src="./assets/images/Screenshot-prework.png"
-                                alt="Previous-work-prework">
-                            </image>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <p class="fw-bolder mt-3">Project 1(Krapyak):</p>
-                        <a href="https://ronin1702.github.io/krapyak/">
-                            <image id="Project-krapyak" src="./assets/images/krapyak.png" alt="Project-krapyak"></image>
-                        </a>
+                        <div class="project-box">
+                            <p class="fw-bolder mt-3">Prework study guide:</p>
+                            <a href="https://cqlove.github.io/prework-study-guide/">
+                                <image id="prework" src="./assets/images/Screenshot-prework.png"
+                                    alt="Previous-work-prework">
+                                </image>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <p class="fw-bolder mt-3">Project 2 cover letter generator(Full-stack-web):</p>
-                        <a href="https://maryze-t1p2-1c897d7fd819.herokuapp.com/">
-                            <image id="Project-cv-letter" src="./assets/images/project2.png" alt="Project-cv-letter">
-                            </image>
-                        </a>
+                        <div class="project-box">
+                            <p class="fw-bolder mt-3">Project 1(Krapyak):</p>
+                            <a href="https://ronin1702.github.io/krapyak/">
+                                <image id="Project-krapyak" src="./assets/images/krapyak.png" alt="Project-krapyak">
+                                </image>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="project-box">
+                            <p class="fw-bolder mt-3">Project 2 cover letter generator(Full-stack-web):</p>
+                            <a href="https://maryze-t1p2-1c897d7fd819.herokuapp.com/">
+                                <image id="Project-cv-letter" src="./assets/images/project2.png"
+                                    alt="Project-cv-letter">
+                                </image>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
